# ginga-sunpy

./: .gitignore  README.md  index.html  params.json  setup.cfg  setup.py  sunpydb
docs/: actions.rst  api.rst  conf.py  database_parameters.rst  filtering.rst  index.rst
docs/guide/: database_table.rst  guide.rst  index.rst  install.rst  optional_parameters.rst
ginga-sunpy/: sunpy_plugin.py
ginga-sunpy/GlobalPlugin/: SunPy.py  SunPy_QtableView.py
ginga_sunpy/: SunPy.py  __init__.py  database_plugin.py  sunpy_plugin.py
scripts/: ginga-sunpy
