[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
[pytest]
minversion = 2.2
norecursedirs = build docs/_build
[ah_bootstrap]
auto_use = True
[metadata]
package_name = ginga_sunpy
description = SunPy specific extensions for the ginga package
long_description = This package contains extensions for the ginga package including a SunPy database browser.
author = Rajul Srivastava, Nabil Freij, Stuart Mumford
author_email = sunpy@googlegroups.com
license = BSD
url = http://sunpy.org
edit_on_github =  True
github_project = sunpy/ginga-sunpy
